# convertai-engine

./: .gitignore  README.md  pyproject.toml  workflow.txt
src/separate_scripts/extract_pdf_text_pdfminer/: README.md  how-to-use.md  interface.py  run.py
src/separate_scripts/extract_pdf_text_pdfminer/files/input/: analise-tamanho-livro.txt
src/separate_scripts/extract_pdf_text_pdfminer/files/output/: output.py  output.txt
src/separate_scripts/extract_pdf_text_pdfminer/modules/: extractAndProcessPage.py  processPage.py  startPage.py
src/separate_scripts/extract_pdf_text_pdfminer/modules/processElement/: check_if_is_text.py  cm_to_pt.py  get_font_family.py  get_font_size.py  get_position.py  get_text.py  get_text_alignment.py  get_text_with_styles.py  is_bold.py  is_header_or_footer.py  is_indented.py  is_italic.py  processElement.py
src/separate_scripts/extract_pdf_text_pdfminer/output/: 1- translated_document.docx  translated_document.docx
src/separate_scripts/extract_pdf_text_pdfplumber/: how-to-use.md  run.py
src/separate_scripts/extract_pdf_text_pdfplumber/modules/: extractAndProcessPage.py
src/test_02/: crew.py  main.py
